Final Clean Ups: - KMeans interpretation added - Outputs in notebooks - Visualization site added - Code Cleaned up - Markdowns for data explanability
Co-authored-by: Enzo-TTD <lorenzogouldd@gmail.com>

--- a/1-data-acquisition.ipynb
+++ b/1-data-acquisition.ipynb
@@ -7,10 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "os.environ[\"HF_DATASETS_CACHE\"] = \"D:/.cache\"\n",
-    "from bigdata_a3_utils import get_cache_directory\n",
-    "from amazon.utils import create_directories, download_data\n",
+    "from amazon.utils import create_directories, download_data, get_cache_directory\n",
     "from amazon.constants import *"
    ]
   },
@@ -21,8 +18,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cache_dir = get_cache_directory(verbose=True)\n",
+    "get_cache_directory()\n",
     "create_directories(DATA_PATHS)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c2ae337",
+   "metadata": {},
+   "source": [
+    "`download_data()` checks if the corresponding Parquet file already exists; if not, it downloads the data, saves it as a Parquet file, clears the Hugging Face cache, and runs garbage collection freeing up ram.\n",
+    "\n",
+    "The loop calls `download_data()` for each category in `ALL_CATEGORIES` for both review and metadata types. Utility functions are included under the hood to optimize performance."
    ]
   },
   {
@@ -32,10 +39,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for category in ALL_CATEGORIES[:15]:\n",
+    "for category in ALL_CATEGORIES:\n",
     "    print(f\"Downloading {category}...\\n\")\n",
-    "    download_data(category, REVIEW, True)\n",
-    "    download_data(category, META, True)"
+    "    download_data(category, REVIEW)\n",
+    "    download_data(category, META)"
    ]
   }
  ],
@@ -55,7 +62,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
