--- a/5-als-system.ipynb
+++ b/5-als-system.ipynb
@@ -5,17 +5,10 @@
    "execution_count": null,
    "id": "35c6e676",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Lorenzo\\Documents\\comp3610A3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%cd ~/Documents/comp3610A3\n",
+    "from sklearnex import patch_sklearn\n",
+    "patch_sklearn()\n",
     "import polars as pl\n",
     "import numpy as np\n",
     "import implicit\n",
@@ -24,12 +17,22 @@
     "from scipy.sparse import coo_matrix, csr_array\n",
     "from amazon.models import normalize_scores  \n",
     "import random\n",
+    "import gc\n",
     "random.seed(42)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2dacf94a",
+   "metadata": {},
+   "source": [
+    "We lazily load the parquet file, select only user IDs, item ASINs, and ratings, and keep users with at least 5 ratings to ensure enough history for training.\n",
+    "Lazily loading helps as we're RAM bounded"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "c19564dc",
    "metadata": {},
    "outputs": [],
@@ -52,11 +55,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3695ca15",
+   "metadata": {},
+   "source": [
+    "Convert the string IDs to categorical codes for efficient indexing, then drop the original strings and collect into memory as a DataFrame."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "id": "adf149f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "unique_users, unique_items = df[\"user_cat\"].unique().sort(), df[\"item_cat\"].unique().sort()\n",
     "\n",
@@ -74,12 +96,23 @@
     "train_ratings = ratings_np[train_indices]\n",
     "\n",
     "test_user_indices, test_item_indices = user_indices_np[test_indices], item_indices_np[test_indices]\n",
-    "test_ratings = ratings_np[test_indices]"
+    "test_ratings = ratings_np[test_indices]\n",
+    "\n",
+    "del df\n",
+    "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09b9e368",
+   "metadata": {},
+   "source": [
+    "Create dictionaries to map back from numeric indices to original IDs, extract NumPy arrays of user/item indices and ratings, then split into training and test sets (80/20)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "id": "f187f3f5",
    "metadata": {},
    "outputs": [],
@@ -89,24 +122,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d294c8c1",
+   "metadata": {},
+   "source": [
+    "Construct a CSR matrix of shape (num_users, num_items) from the training set ratings for the ALS model."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "id": "6bb7d317",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "27fcce89d14e46e1ab3b911f6f9b892e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/15 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/glor/300/comp3610A3/venv/lib/python3.12/site-packages/implicit/cpu/als.py:95: RuntimeWarning: OpenBLAS is configured to use 24 threads. It is highly recommended to disable its internal threadpool by setting the environment variable 'OPENBLAS_NUM_THREADS=1' or by calling 'threadpoolctl.threadpool_limits(1, \"blas\")'. Having OpenBLAS use a threadpool can lead to severe performance issues here.\n",
+      "  check_blas_config()\n",
+      "100%|██████████| 15/15 [1:11:14<00:00, 284.96s/it]\n"
+     ]
     }
    ],
    "source": [
@@ -117,8 +153,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e75e8d89",
+   "metadata": {},
+   "source": [
+    "Initialize and fit an Alternating Least Squares model with 50 latent factors, L2 regularization, and 15 iterations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb771d11",
+   "metadata": {},
+   "source": [
+    "Predict ratings for test interactions by computing the dot product of user and item factor vectors, then report RMSE."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "01e93c82",
    "metadata": {},
    "outputs": [
@@ -126,7 +178,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Root-mean-square error (RMSE) on test data = 4.4926\n"
+      "Root-mean-square error (RMSE) on test data = 4.4181\n"
      ]
     }
    ],
@@ -142,12 +194,31 @@
     "    print(f\"Root-mean-square error (RMSE) on test data = {rmse:.4f}\")\n",
     "else:\n",
     "    print(\"Warning: No test ratings could be predicted.\")\n",
-    "    rmse = float('nan')"
+    "    rmse = float('nan')\n",
+    "\n",
+    "# Sample Root-mean-square error (RMSE) on test data = 4.4926\n",
+    "# Full Root-mean-square error (RMSE) on test data = 4.4181"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a49dea3f",
+   "metadata": {},
+   "source": [
+    "The elevated RMSE stems from the dataset’s large size and low variance in interaction sums. The assignment instructions on feature selection, and minimal tuning being accepted, superseded further optimization, so we accepted the model’s performance.  The top-5 unseen recommendations (normalized scores) for three random test users was selected, each exceeding 4.0 on a 5-point scale—but the high RMSE means individual rating estimates remain imprecise."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5eed997",
+   "metadata": {},
+   "source": [
+    "Sample three users from the test set, compute predicted scores for all items, mask out items they've already seen, normalize the scores, then print their top-5 recommended ASINs with predicted ratings."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "3f6c432e",
    "metadata": {},
    "outputs": [
@@ -156,31 +227,31 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "User AGCYDOSYCLJAPBNO4T7CUKBSXRDA (idx=33889):\n",
-      "  ASIN B001IKCGLM — pred. rating 5.00\n",
-      "  ASIN B00RQPUV0Q — pred. rating 4.51\n",
-      "  ASIN B07FZ8S74R — pred. rating 4.12\n",
-      "  ASIN B01LXZDPDR — pred. rating 3.82\n",
-      "  ASIN B000P0LNRE — pred. rating 3.65\n",
+      "User AECVLWXQSOTOA4R7IB4KWTUB4H3Q (idx=3970955):\n",
+      "  ASIN B01MFGX5GI — pred. rating 5.00\n",
+      "  ASIN B07Q5TL9SQ — pred. rating 4.78\n",
+      "  ASIN B06Y1264PX — pred. rating 4.76\n",
+      "  ASIN B00K2EOONI — pred. rating 4.73\n",
+      "  ASIN B07MV8SWZF — pred. rating 4.68\n",
       "\n",
-      "User AGLKX4WZSC5DTW2N657GC7XDF66Q (idx=7639):\n",
-      "  ASIN B005UEB96K — pred. rating 5.00\n",
-      "  ASIN B01415QHYW — pred. rating 3.76\n",
-      "  ASIN B00081J3N6 — pred. rating 3.66\n",
-      "  ASIN B009EDSWJA — pred. rating 3.34\n",
-      "  ASIN B00ECHYTBI — pred. rating 3.32\n",
+      "User AFTKJPWKJIC7R3J23RVC5JYPUJGA (idx=876054):\n",
+      "  ASIN B00DS842HS — pred. rating 5.00\n",
+      "  ASIN B00FLYWNYQ — pred. rating 4.44\n",
+      "  ASIN B0009X29WK — pred. rating 4.36\n",
+      "  ASIN B00016XJ4M — pred. rating 4.16\n",
+      "  ASIN B0026HDURA — pred. rating 4.14\n",
       "\n",
-      "User AFVYFZDT62MIXIEGU4IAOAAOYWXQ (idx=83994):\n",
-      "  ASIN B00TSUGXKE — pred. rating 5.00\n",
-      "  ASIN B00IKM5N02 — pred. rating 4.61\n",
-      "  ASIN B00ZV9RDKK — pred. rating 4.54\n",
-      "  ASIN B01DFKC2SO — pred. rating 4.11\n",
-      "  ASIN B010Q57T02 — pred. rating 3.99\n"
+      "User AEJPJARKMDB6YBVFJDWYGGONXV4Q (idx=10046557):\n",
+      "  ASIN B079QHML21 — pred. rating 5.00\n",
+      "  ASIN B001T7QJ9O — pred. rating 4.50\n",
+      "  ASIN B0043T7FXE — pred. rating 4.49\n",
+      "  ASIN B004S8F7QM — pred. rating 4.37\n",
+      "  ASIN B003NR57BY — pred. rating 4.12\n"
      ]
     }
    ],
    "source": [
-    "# %% Demo: Top‑5 recommendations for 3 random test users\n",
+    "# Demo: Top‑5 recommendations for 3 random test users\n",
     "unique_test_users: np.ndarray = np.unique(test_user_indices)\n",
     "demo_users: list[int] = random.sample(list(unique_test_users), 3)\n",
     "\n",
@@ -196,6 +267,18 @@
     "    print(f\"\\nUser {user_id_map[user_idx]} (idx={user_idx}):\")\n",
     "    for item_idx in top5_idx:\n",
     "        print(f\"  ASIN {item_id_map[item_idx]} — pred. rating {scores[item_idx]:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "278cc8d1",
+   "metadata": {},
+   "source": [
+    "For each of the three randomly selected users, the model has identified five products they have not yet rated but are likely to enjoy based on the learned latent factors. The `predicted normalized` ratings close to 5.00 indicate very strong recommendations: for example, user `AECVLWXQSOTOA4R7IB4KWTUB4H3Q` (idx 3970955) sees ASIN `B01MFGX5GI` predicted at exactly 5.00, suggesting an almost certain match with their preferences. \n",
+    "\n",
+    "Slightly lower scores `(e.g., 4.68 or 4.76)` still reflect high confidence, ranking those items just below the top pick. \n",
+    "\n",
+    "Across all three users, the recommendations span different `ASINs` but consistently show that the ALS model can surface items that align well with underlying user tastes, offering a personalized shortlist of products each user is most likely to rate highly."
    ]
   }
  ],
