--- a/2-data-cleaning.ipynb
+++ b/2-data-cleaning.ipynb
@@ -2,22 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "d5514817",
    "metadata": {},
    "outputs": [],
    "source": [
     "import polars as pl\n",
     "from amazon.constants import *\n",
-    "import gc\n",
+    "import gc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f124801",
+   "metadata": {},
+   "source": [
+    "`extract_brand()` returns a Polars expression that creates a brand column which holds either the value from store after stripping white spaces or the value from the \"details\" column after removing the 'Brand:'\n",
     "\n",
-    "N_SAMPLE = 500_000"
+    "`process_category()` loads the meta and review Parquet files into LazyFrames and joins them on parent_asin. It filters rows with valid ratings and non-empty text, adds the brand column using extract_brand(), removes duplicates, and adds a \"year\" column extracted from the timestamp. The cleaned LazyFrame is then saved as a Parquet file in the intermediate folder."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "eaf2cfc2",
+   "execution_count": null,
+   "id": "96733738",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,9 +38,6 @@
     "def process_category(category: str) -> None:\n",
     "    lf_review: pl.LazyFrame = pl.scan_parquet(f\"{RAW}/{REVIEW}/{category}.parquet\")\n",
     "    lf_meta: pl.LazyFrame = pl.scan_parquet(f\"{RAW}/{META}/{category}.parquet\")\n",
-    "\n",
-    "    lf_review = lf_review.head(N_SAMPLE)\n",
-    "    lf_meta = lf_meta.head(N_SAMPLE)\n",
     "\n",
     "    # a) Merge on parent asin\n",
     "    lf: pl.LazyFrame = lf_review.join(lf_meta, on=\"parent_asin\", how=\"inner\")\n",
@@ -50,7 +55,16 @@
     "        pl.col(\"text\").str.count_matches(r\"\\b\\w+\\b\").alias(\"review_length\"),\n",
     "        (pl.col(\"timestamp\").cast(pl.Datetime(\"ms\")).dt.year()).alias(\"year\")\n",
     "    ])\n",
+    "\n",
     "    lf.sink_parquet(f\"{INTERMEDIATE}/{category}.parquet\", engine=\"streaming\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05f187fa",
+   "metadata": {},
+   "source": [
+    "Process and clean each parquet using the functions detailed above and uses grabage collections freeing up RAM on each iteration."
    ]
   },
   {
@@ -60,11 +74,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for category in ALL_CATEGORIES[:15]:\n",
+    "for category in ALL_CATEGORIES:\n",
     "    print(f\"Cleaning dataset for {category}...\")\n",
     "    process_category(category)\n",
-    "\n",
-    "gc.collect()"
+    "    gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4434f33",
+   "metadata": {},
+   "source": [
+    "After cleaning each category parquet in `ALL_CATEGORIES` the parquets are then loaded into a lazy frame, merged into a singular combined parquet and saved in the processed folder(Gold Layer)."
    ]
   },
   {
@@ -74,14 +95,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# merged: pl.LazyFrame = pl.concat([\n",
-    "#     pl.scan_parquet(f\"{INTERMEDIATE}/{category}.parquet\")\n",
-    "#     for category in ALL_CATEGORIES[:15]\n",
-    "# ])\n",
-    "\n",
     "merged: pl.LazyFrame = pl.scan_parquet(f\"{INTERMEDIATE}/*.parquet\")\n",
-    "# merged = merged.unique(subset=[\"user_id\", \"text\", \"asin\"], keep=\"first\")\n",
+    "merged = merged.unique(subset=[\"user_id\", \"text\", \"asin\"], keep=\"first\")\n",
     "merged.sink_parquet(\"data/processed/amazon-2023.parquet\", engine=\"streaming\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e58831c1",
+   "metadata": {},
+   "source": [
+    "Collated DataFrame was 502,984,947 rows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7123e392",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(502_984_947, 27)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# (502_984_947, 27)\n",
+    "merged.collect(engine=\"streaming\").shape"
    ]
   }
  ],
@@ -101,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
