fixed small spelling error

--- a/2-data-cleaning.ipynb
+++ b/2-data-cleaning.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "`extract_brand()` returns a Polars expression that creates a brand column which holds either the value from store after stripping white spaces or the value from the \"details\" column after removing the 'Brand:'\n",
     "\n",
-    "`process_category()` loads the meta and review Parquet files into LazyFrames and joins them on parent_asin. It filters rows with valid ratings and non-empty text, adds the brand column using extract_brand(), removes duplicates, and adds a \"year\" column extracted from the timestamp. The cleaned LazyFrame is then saved as a Parquet file in the intermediate folder."
+    "`process_category()` loads the meta and review parquet files into LazyFrames and joins them on parent_asin. It filters rows with valid ratings and non-empty text, adds the brand column using extract_brand(), removes duplicates, and adds a \"year\" column extracted from the timestamp. The cleaned LazyFrame is then saved as a Parquet file in the intermediate folder."
    ]
   },
   {
@@ -144,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
